src/include/c_api.h


EDITOR_API void editor_set_read_only(intptr_t editor_handle, int read_only);
EDITOR_API int editor_is_read_only(intptr_t editor_handle);
EDITOR_API void editor_set_auto_indent_mode(intptr_t editor_handle, int mode);
EDITOR_API int editor_get_auto_indent_mode(intptr_t editor_handle);
EDITOR_API void editor_set_handle_config(intptr_t editor_handle,
    float start_left, float start_top, float start_right, float start_bottom,
    float end_left, float end_top, float end_right, float end_bottom);
EDITOR_API void editor_set_scrollbar_config(intptr_t editor_handle,
    float thickness, float min_thumb, float thumb_hit_padding,
    int mode, int thumb_draggable, int track_tap_mode,
    int fade_delay_ms, int fade_duration_ms);
EDITOR_API void editor_get_position_rect(intptr_t editor_handle,
    size_t line, size_t column,
    float* out_x, float* out_y, float* out_height);
EDITOR_API void editor_get_cursor_rect(intptr_t editor_handle,
    float* out_x, float* out_y, float* out_height);
EDITOR_API void editor_scroll_to_line(intptr_t editor_handle, size_t line, uint8_t behavior);
EDITOR_API void editor_goto_position(intptr_t editor_handle, size_t line, size_t column);
EDITOR_API void editor_set_scroll(intptr_t editor_handle, float scroll_x, float scroll_y);
EDITOR_API const uint8_t* editor_get_scroll_metrics(intptr_t editor_handle, size_t* out_size);
EDITOR_API void editor_register_text_style(intptr_t editor_handle, uint32_t style_id, int32_t color, int32_t background_color, int32_t font_style);
EDITOR_API void editor_set_line_spans(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_batch_line_spans(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_register_batch_text_styles(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_clear_highlights_layer(intptr_t editor_handle, uint8_t layer);
EDITOR_API void editor_set_line_inlay_hints(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_batch_line_inlay_hints(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_line_phantom_texts(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_batch_line_phantom_texts(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_line_gutter_icons(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_batch_line_gutter_icons(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_max_gutter_icons(intptr_t editor_handle, uint32_t count);
EDITOR_API void editor_clear_gutter_icons(intptr_t editor_handle);
EDITOR_API void editor_set_line_diagnostics(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_batch_line_diagnostics(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_clear_diagnostics(intptr_t editor_handle);
EDITOR_API void editor_set_indent_guides(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_bracket_guides(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_flow_guides(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_set_separator_guides(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API void editor_clear_guides(intptr_t editor_handle);
EDITOR_API void editor_set_bracket_pairs(intptr_t editor_handle, const uint32_t* open_chars, const uint32_t* close_chars, size_t count);
EDITOR_API void editor_set_matched_brackets(intptr_t editor_handle, size_t open_line, size_t open_col, size_t close_line, size_t close_col);
EDITOR_API void editor_clear_matched_brackets(intptr_t editor_handle);
EDITOR_API void editor_set_fold_regions(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API int editor_toggle_fold(intptr_t editor_handle, size_t line);
EDITOR_API int editor_fold_at(intptr_t editor_handle, size_t line);
EDITOR_API int editor_unfold_at(intptr_t editor_handle, size_t line);
EDITOR_API void editor_fold_all(intptr_t editor_handle);
EDITOR_API void editor_unfold_all(intptr_t editor_handle);
EDITOR_API int editor_is_line_visible(intptr_t editor_handle, size_t line);
EDITOR_API void editor_clear_highlights(intptr_t editor_handle);
EDITOR_API void editor_clear_inlay_hints(intptr_t editor_handle);
EDITOR_API void editor_clear_phantom_texts(intptr_t editor_handle);
EDITOR_API void editor_clear_all_decorations(intptr_t editor_handle);
EDITOR_API const uint8_t* editor_insert_snippet(intptr_t editor_handle, const char* snippet_template, size_t* out_size);
EDITOR_API void editor_start_linked_editing(intptr_t editor_handle, const uint8_t* data, size_t size);
EDITOR_API int editor_is_in_linked_editing(intptr_t editor_handle);
EDITOR_API int editor_linked_editing_next(intptr_t editor_handle);
EDITOR_API int editor_linked_editing_prev(intptr_t editor_handle);
EDITOR_API void editor_cancel_linked_editing(intptr_t editor_handle);
EDITOR_API void free_u16_string(intptr_t string_ptr);
EDITOR_API void free_binary_data(intptr_t data_ptr);